codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_missing_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.42.0)                                   │
│                                                              │
│  Model:         gpt-5-codex (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                    │
│  Approval:      on-request                                   │
│  Sandbox:       read-only                                    │
│  Agents.md:     <none>                                       │
│                                                              │
│  Token usage:   750 total  (500 input + 250 output)          │
│  Limits:        send a message to load usage data            │
╰──────────────────────────────────────────────────────────────╯
